<resources>
    <string name="app_name">Review App</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="title">Sign in</string>
    <string name="create">Create Account</string>
    <string name="exists">This account already exists, please login or use a different Username</string>
    <string name="guest">Guest</string>
    <string name="guestText">Or browse as a Guest</string>
    <string name="welcomeMessage">Welcome </string>
    <string name="sugguestions">Places you may want to go</string>
    <string name="user">Guest</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="account">Account</string>
    <string name="loginOut">Login</string>
    <string name="restaurant_search">Restaurant Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="navLogout">Logout</string>
    <string name="navLogin">Login</string>
    <string name="progressDef">progress until next level</string>
    <string name="deleteAccount">Delete Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="uploadImage">Upload Image</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="reviewTitle">Review Title</string>
    <string name="delivers">Delivers:</string>
    <string name="eat_in">Eat In:</string>
</resources>