<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/navList"
        android:icon="@drawable/search"
        android:title="@string/restaurant_search" />

    <item android:title="@string/profile">
        <menu>

            <item
                android:id="@+id/account"
                android:icon="@drawable/account"
                android:title="@string/account" />

            <item
                android:id="@+id/loginOut"
                android:icon="@drawable/login"
                android:title="@string/login" />
        </menu>
    </item>

</menu>